--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,7 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url = 'https://maven.brott.dev/' }
     flatDir {
         dirs rootProject.file('libs')
     }
@@ -20,5 +21,6 @@ dependencies {
     implementation 'org.firstinspires.ftc:gameAssets-PowerPlay:1.0.0'
     implementation 'org.openftc:easyopencv:1.5.2'
     implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.5'
 }
 
