--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -22,5 +22,6 @@ dependencies {
     implementation 'org.openftc:easyopencv:1.5.2'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.5'
+    implementation 'org.openftc:apriltag:1.1.1'
 }
 
