--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -23,5 +23,6 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.5'
     implementation 'org.openftc:apriltag:1.1.1'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.5'
 }
 
